# pypto-serving

./: .gitignore  AGENT_HANDOFF.md  CMakeLists.txt  CONTRIBUTING.md  DEPENDENCY_SETUP_SUMMARY.md  DESIGN_COMPARISON.md  DOCS_INDEX.md  EXECUTION_MODES.md  GIT_ORGANIZATION.md  LLAMA_IMPLEMENTATION.md  MIGRATION_CHECKLIST.md  MIGRATION_GUIDE.md  MIGRATION_SUMMARY.md  MOCK_VS_REAL.md  MODEL_CONFIGS.md  PHASE0_COMPLETE.md  PHASE1_COMPLETE.md  PHASE1_SIMULATOR_READY.md  PTO2_INTEGRATION_V1.md  PUSH_TO_GITHUB.md  QUICKSTART.md  README.md  SCRIPTS.md  SIMULATOR_SETUP.md  START_HERE.md  clean.sh  design goal.md  implementation_plan.md  implementation_plan_v2.md  quick_start.sh  reference_sglang_vllm.md  setup_dependencies.sh  verify.sh
examples/config_verification/: verify_config.cpp
examples/llama_demo/: llama_demo.cpp
examples/llama_pto2_demo/: llama_pto2_demo.cpp
examples/llama_test/: llama_test.cpp
examples/mock_llama/: mock_llama.cpp
examples/pto2_demo/: pto2_demo.cpp
examples/simple_generate/: simple_generate.cpp
examples/simulator_demo/: simulator_demo.cpp
examples/tinyllama_test/: tinyllama_test.cpp
src/common/: config.cpp  config.h  logger.cpp  logger.h  types.h
src/engine/: engine.cpp  engine.h  model_runner_llama.cpp  model_runner_llama.h  model_runner_llama_pto2.cpp  model_runner_llama_pto2.h  model_runner_mock.cpp  model_runner_mock.h  model_runner_pto2.cpp  model_runner_pto2.h  scheduler.cpp  scheduler.h  sequence.cpp  sequence.h
src/frontend/: test_path.cpp  test_path.h
src/llama/: attention.h  layers.h  mlp.h  tensor.h  transformer.h
src/llama_pto2/: attention_pto2.cpp  attention_pto2.h  layers_pto2.cpp  layers_pto2.h  mlp_pto2.cpp  mlp_pto2.h  pto2_runtime_stub.cpp  tensor_pto2.cpp  tensor_pto2.h  transformer_pto2.cpp  transformer_pto2.h
src/pto2/: pto2_config.cpp  pto2_config.h  pto2_runtime.cpp  pto2_runtime.h  pto2_types.h
src/radix/: block_manager.cpp  block_manager.h  kv_pool_mock.cpp  kv_pool_mock.h
src/sampling/: sampler.cpp  sampler.h
tests/integration/: test_engine_integration.cpp
tests/unit/: test_block_manager.cpp  test_llama.cpp  test_scheduler.cpp  test_sequence.cpp
